Docker image improvements